--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     </head>
     
     <body>
-        <p>Welcome to My Web Site!!</p>
+        <center> 
+            <h1>STEM PREP CLASS MEETING FILES</h1>
+            
+            <h2>June 24, 2020 Class Files</h2>
+            <p>
+                <a href="headings.html">Heading Demo</a> <br>
+                <a href="numberedList.html">Numbered List Demo</a> <br>
+                <a href="bulletedList.html">Bulleted List Demo</a> <br>
+            </p>
+        </center>
     </body>
 </html>
