--- a/bulletedList.html
+++ b/bulletedList.html
@@ -10,5 +10,7 @@
       <li>Another Item</li>
       <li>And Another Item</li>
     </ul>
+
+    <p><a href="index.html">Return to home page</a></p>
   </body>
 </html>
