--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
             <h2>Accomplishments</h2>
             <ul>
                <li>Selected and voted to become Clarinet Section Leader in Marching Band while I was attending Columbia.</li>
-               <li>Also selected to become second chair for wind ensemble while at Columbia </li>
+               <li>Also selected to become second chair for Wind Ensemble while at Columbia </li>
                <li>Helped host and organize a music program to raise money for minority schools that do not have access to music instruments and/or resources </li>
                <li>Volunteered over 200 hours for Habitat for Humanity </li>
                <li>Learned to create my first website (again) </li>
