--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             
             <h2>June 24, 2020 Class Files</h2>
             <p>
-                <a href="headings.html">Heading Demo</a> <br>
+                <a href="heading.html">Heading Demo</a> <br>
                 <a href="numberedList.html">Numbered List Demo</a> <br>
                 <a href="bulletedList.html">Bulleted List Demo</a> <br>
+                <a href="resume.html">My Resume</a> <br>
             </p>
         </center>
     </body>
