--- a/Students.html
+++ b/Students.html
@@ -2,6 +2,11 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=windows-1252">
 <TITLE>Students</TITLE>
+  <style>
+    body{
+      background-color: #8d72e8;
+    }
+  </style>
 </HEAD>
 <BODY>
 <TABLE BORDER=1 BGCOLOR=#ffffff CELLSPACING=0><FONT FACE="Calibri" COLOR=#000000><CAPTION><B>Students</B></CAPTION></FONT>
